Add cargo metadata

--- a/delta-struct-macros/Cargo.toml
+++ b/delta-struct-macros/Cargo.toml
@@ -3,6 +3,9 @@ name = "delta-struct-macros"
 version = "0.1.0"
 authors = ["jacobkiesel <jacob.kiesel@vivint.com>"]
 edition = "2018"
+repository = "https://github.com/vivint-smarthome/delta-struct-rs"
+license = "MIT OR Apache-2.0"
+description = "Delta struct provides a rust-lang Deriveable trait, Delta, that can be used to compute the difference (aka delta) between two instances of a type."
 
 [lib]
 proc_macro = true
